# multitenant_django_app

./: .gitignore  manage.py  pyproject.toml
client/: admin.py  models.py
client/migrations/: 0001_initial.py
hotel_shared/: admin.py  enums.py  models.py
hotel_shared/migrations/: 0001_initial.py
hotel_tenant/: admin.py  models.py
hotel_tenant/migrations/: 0001_initial.py
multitenant_app/: asgi.py  settings.py  urls_public.py  wsgi.py
multitenant_app/settings/: base.py  config.py  local_config.json
